<resources>
    <string name="app_name">Ojas - Dynamic Seat Allocation System </string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>

    <string name="comprt1">Compartment 1</string>
    <string name="comprt2">Compartment 2</string>
    <string name="comprt3">Compartment 3</string>
    <string name="comprt4">Compartment 4</string>
    <string name="comprt5">Compartment 5</string>
    <string name="comprt6">Compartment 6</string>
    <string name="comprt7">Compartment 7</string>
    <string name="comprt8">Compartment 8</string>
    <string name="comprt9">Compartment 9</string>

    <string name="select_train">Select the train</string>
    <string name="select_coach">Select the coach</string>
    <string name="train">Train :</string>
    <string name="coach">Coach :</string>
    <string name="submit">Submit</string>
    <string name="nxt">Next</string>
    <string name="Name">Name</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="train_no">Train No</string>
    <string name="coach_no">Coach No</string>
    <string name="book_ticket">Book Ticket</string>
    <string name="mob">Mobile No.</string>

</resources>
