<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginTop="0dp"
    tools:context=".Sign_in">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <RadioButton
            android:id="@+id/simpleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TTE"
            android:layout_marginRight="20dp"/>
        <RadioButton
            android:id="@+id/simpleRadioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Passenger"
            android:layout_marginLeft="20dp"/>
    </RadioGroup>


    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="0dp"
        android:hint="@string/user"
        android:drawableLeft="@drawable/email1"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:background="@drawable/round_button"
        android:text="@string/sign_in"
        android:onClick="sign_in"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@android:color/white"/>
</LinearLayout>